--- a/App/src/index.html
+++ b/App/src/index.html
@@ -5,7 +5,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=K2D:wght@200;300;400;500;700&display=swap");
     </style>
-    <title>1st Angular App</title>
+    <title>M. Bisovskyi Portfolio</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
